k8s/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: product-authz
  namespace: yas
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: product
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/yas/sa/storefront-bff"]
